--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: nebularg/actions-luacheck@v1
         with:
-          args: '-q --formatter plain'
+          args: '-q --formatter plain --no-cache'
           annotate: 'warning'
