--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   update-vim-patches:
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
     env:
       VIM_SOURCE_DIR: ${{ format('{0}/vim-src', github.workspace) }}
       VERSION_BRANCH: marvim/ci-version-update
