--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-20.04
     permissions:
       contents: write
+      pull-requests: write
     env:
       VIM_SOURCE_DIR: ${{ format('{0}/vim-src', github.workspace) }}
       VERSION_BRANCH: marvim/ci-version-update
