--- a/.github/workflows/gendoc-check.yml
+++ b/.github/workflows/gendoc-check.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     branches:
-      - 'master'
+      - 'gendocs-ci'
       - 'release-[0-9]+.[0-9]+'
     paths:
       - 'src/nvim/api/*.[ch]'
